--- a/Spring/SpringCloud/Netflix/06.Client Side Load Balancer-Ribbon.md
+++ b/Spring/SpringCloud/Netflix/06.Client Side Load Balancer-Ribbon.md
@@ -1,51 +1,39 @@
 #  6. Client Side Load Balancer: Ribbon #
 
-Ribbon是一种客户端负载平衡器（client side load balancer），可以对 HTTP运行情况 和TCP客户端进行多种控制。 Feign已经使用 Ribbon, 因此如果使用` @FeignClient` ，也适用于本章节。
+Ribbon是一种客户端负载均衡器（client side load balancer），可以对HTTP和TCP客户端的运行情况进行多种控制。 Feign已经集成了Ribbon, 因此如果使用`@FeignClient`，也适用于本章节。
 
-Ribbon的中心思想是命名的客户端（named client）。每个load balancer是构件集合（ensemble of components）的一部分，能够与所需的远程服务器进行联系，你作为开发者所赋予该集合名字(例如使用 @FeignClient annotation)。Spring Cloud创建了一个新的集合`ApplicationContex` 从而使用`RibbonClientConfiguration`来获取客户端名。包括`ILoadBalancer`, a `RestClient`, 以及 a `ServerListFilter`。
+Ribbon的核心思想是命名的客户端（named client）。每个负载均衡都是与远程服务器连接的集成组件的一部分，作为开发者所赋予该集成组件名字(例如使用`@FeignClient`注解)。Spring Cloud通过`RibbonClientConfiguration`为每个已命名的客户端创建了一个新的集成件`ApplicationContext`。这包括了`ILoadBalancer`,  `RestClient`, 以及`ServerListFilter`。
 
 ## 6.1 How to Include Ribbon ##
 为了在程序中使用Ribbon，要以 group `org.springframework.cloud`开头，并且artifact id `spring-cloud-starter-netflix-ribbon`。
 
-
 ## 6.2 Customizing the Ribbon Client ##
-可以使用 `<client>.ribbon.*`的外部属性来配置Ribbon client 的一部分, 除了你可以使用Spring Boot配置文件外，这与使用Netflix APIs natively并无太大差别。本机选项可以作为`CommonClientConfigKey`(ribbon-core的一部分)的静态字段（static fields）进行检查。
+可以使用 `<client>.ribbon.*`的外部属性来配置Ribbon客户端，这与在本地使用Netflix APIs并无太大差别。本地选项可以作为`CommonClientConfigKey`(ribbon-core的一部分)中的静态字段进行被检查到。
 
-通过使用`@RibbonClient`声明额外配置 ( `RibbonClientConfiguration`顶部（top）)，Spring Cloud也允许对client进行全局控制（full control）
+Spring Cloud也允许通过`@RibbonClient`声明额外配置 (先于`RibbonClientConfiguration`)对客户端进行全面掌控，示例如下：
 
-```@Configuration
-@RibbonClient(name = "foo", configuration = FooConfiguration.class)
+```
+@Configuration
+@RibbonClient(name = "foo", configuration = CustomConfiguration.class)
 public class TestConfiguration {
-}```
+}
+```
 
-上例中，客户端是由`RibbonClientConfiguration`的成分与任何  `FooConfiguration` 的成分共同组成(后者可覆盖前者)。
+上例中，客户端是由`RibbonClientConfiguration`与`CustomConfiguration`共同组成(后者可覆盖前者)。
 
-[Warning]
- `FooConfiguration` 必须是 `@Configuration` ，但是要小心不能作为主程序内容存在于`@ComponentScan` ，否则要被所有`@RibbonClients`分享。 如果使用 `@ComponentScan` (或`@SpringBootApplication`) ，需要采取措施以免其被包含（ included ） (例如将其打包进一个单独的、非重叠性的程序包，或用`@ComponentScan`明确指定程序包进行扫描。
+> `CustomConfiguration` 必须是 `@Configuration`，但是要保证不能被主程序的`@ComponentScan`范围内。否则会被所有`@RibbonClients`分享。 如果使用 `@ComponentScan` (或`@SpringBootApplication`) ，需要采取措施以免其被扫描到 (例如将其打包进一个单独的、未被覆盖的的程序包，或用`@ComponentScan`明确指定程序包扫描范围）。
 
 Spring Cloud Netflix通过ribbon (`BeanType` beanName: `ClassName`)缺省提供下列beans：
 
-
-
-- `IClientConfig` ribbonClientConfig: `DefaultClientConfigImpl`
-
-
-- `IRule` ribbonRule: `ZoneAvoidanceRule`
-
-
-- `IPing` ribbonPing: `DummyPing`
-
-
-- `ServerList<Server>` ribbonServerList: `ConfigurationBasedServerList`
-
-
-- `ServerListFilter<Server>` ribbonServerListFilter: `ZonePreferenceServerListFilter`
-
-
-- `ILoadBalancer` ribbonLoadBalancer: `ZoneAwareLoadBalancer`
-
-
-- `ServerListUpdater` ribbonServerListUpdater: `PollingServerListUpdater`
+| Bean类型 | Bean名称 | 类名 |
+| -------- | -------- | -------- | 
+| `IClientConfig` | `ribbonClientConfig` | `DefaultClientConfigImpl` |
+| `IRule` | `ribbonRule` | `ZoneAvoidanceRule` |
+| `IPing` | `ribbonPing` | `DummyPing` |
+| `ServerList<Server>` | `ribbonServerList` | `ConfigurationBasedServerList` |
+| `ServerListFilter<Server>` | `ribbonServerListFilter`| `ZonePreferenceServerListFilter` |
+| `ILoadBalancer` | `ribbonLoadBalancer` | `ZoneAwareLoadBalancer` | 
+| `ServerListUpdater` | `ribbonServerListUpdater` | `PollingServerListUpdater` |
 
 创建上述形式的bean，并将其置于`@RibbonClient` configuration (例如上述的`FooConfiguration` ) 就可以覆盖每个 beans描述。例如：
 
