--- a/Spring/SpringCloud/Netflix/06.Client Side Load Balancer-Ribbon.md
+++ b/Spring/SpringCloud/Netflix/06.Client Side Load Balancer-Ribbon.md
@@ -190,7 +190,7 @@ ribbon:
 ## 6.10 How to Configure Hystrix thread pools ##
 
 如果将`zuul.ribbonIsolationStrategy`的值修改为`THREAD`, 那么Hystrix的线程隔离策略将会被用在所有的路由中。在这种情况下，`HystrixThreadPoolKey`的默认设置为`RibbonCommand`。这就是说所有路由的HystrixCommands将会在同一个Hystrix线程池中被执行。这种行为可以通过使用下述配置进行改变，这会导致HystrixCommand在各个路由的Hystrix线程池中执行：
-**application.yml.** 
+**application.yml** 
 ```yaml
 zuul:
   threadPool:
@@ -199,7 +199,7 @@ zuul:
 
 默认各个路由的`HystrixThreadPoolKey`与serviceID一致。 设置 `zuul.threadPool.threadPoolKeyPrefix`为`HystrixThreadPoolKey`附加你希望的前缀名称。例如：
 
-**application.yml.** 
+**application.yml** 
 ```yaml
 zuul:
   threadPool:
@@ -210,7 +210,7 @@ zuul:
 ## 6.11 How to Provide a Key to Ribbon’s `IRule` ##
 如果需要提供你自己的`IRule`实现类来处理特殊的路由需求，例如 canary测试，就需要给`IRule`的`choose`方法传递一些信息。
 
-**com.netflix.loadbalancer.IRule.java. **
+**com.netflix.loadbalancer.IRule.java**
 ```java
     public interface IRule{
     public Server choose(Object key);
