--- a/Spring/SpringCloud/Netflix/07.Declarative REST Client-Feign.md
+++ b/Spring/SpringCloud/Netflix/07.Declarative REST Client-Feign.md
@@ -1,12 +1,13 @@
 # 7. Declarative REST Client: Feign #
-[Feign](https://github.com/OpenFeign/feign)是说明式的web服客户端（web service client），使写web service clients更加容易。 使用Feign创建接口（interface）并注解。 具有可插拔（pluggable） annotation支持Feign annotations以及JAX-RS annotations. Feign也支持pluggable encoders及decoders。 Spring Cloud另外支持 Spring MVC annotations以及在Spring Web中默认使用的同样的
-`HttpMessageConverters`。使用Feign时，Spring Cloud集合了Ribbon和Eureka 提供load balanced http client。
+[Feign](https://github.com/OpenFeign/feign)是声明式的web服务客户端，使写web服务客户端更加容易。 通过创建接口并做相应的注解来使用Feign。 具有包括Feign以及JAX-RS注解的插入式注解支持。Feign也支持插入式encoders及decoders。 Spring Cloud支持Spring MVC注解，同时也支持Spring Web中使用的默认
+`HttpMessageConverters`。使用Feign时，Spring Cloud集成了Ribbon和Eureka实现客户端的负载均衡。
 
 ## 7.1 How to Include Feign ##
-使用Feign：starter with group `org.springframework.cloud` ，artifact id s`pring-cloud-starter-openfeign`。
+通过group `org.springframework.cloud` ，artifact id s`pring-cloud-starter-openfeign`可引入Feign。
 
-Example spring boot app：
-```
+通过Spring Boot应用示例：
+
+```java
 @Configuration
 @ComponentScan
 @EnableAutoConfiguration
@@ -19,7 +20,7 @@ public class Application {
 
 }
 ```
-**StoreClient.java. **
+**StoreClient.java**
 
 ```
 @FeignClient("stores")
@@ -31,55 +32,49 @@ public interface StoreClient {
     Store update(@PathVariable("storeId") Long storeId, Store store);
 }
 ```
-在`@FeignClient` annotation中 , String值("stores" )是任意的client name, 用来创建 Ribbon load balancer，可查阅第6章。
-也可以使用 url attribute (绝对值（absolute value）或hostname)来指定URL 。在application context中bean名是接口（interface）的限定名（qualified name）。可以使用`@FeignClient` annotation中修饰符值（qualifier value）来指定alias值。
-上述Ribbon client希望为"stores" service查询物理地址。如果你的程序是Eureka client 那么将在 Eureka service registry中解析此服务器。如果不想使用Eureka, 可以在你外部配置表（external configuration）中简单配置一个服务器列表。
+在`@FeignClient`注解中,字符串值("stores")可以设置任意的客户端名称, 这个名称会用来创建Ribbon负载均衡器。
+也可以使用url属性(绝对值或主机名称)来指定URL。在应用上下文中bean名是接口的全名(qualified name)。可以使用`@FeignClient`中`qualifier`值来指定别名值。  
+上述Ribbon客户端会找到"stores"服务的物理地址。如果你的程序是Eureka客户端，那么将在 Eureka服务注册中解析此服务。如果不想使用Eureka, 可以在你外部配置表中简单配置一个服务器列表。
 
 ## 7.2 Overriding Feign Defaults ##
 
-Spring Cloud’s Feign support的中心内容是named client。每个feign client是ensemble of components的一部分，按需求共同联系远程客户端（remote server）， 该集合的名字是使用`@FeignClient` annotation，作为application developer赋予的。Spring Cloud按需为每个使用`FeignClientsConfiguration`的客户端创建了一个新的集合作为`ApplicationContext`。包括 `feign.Decoder`，`feign.Encoder`， `feign.Contract`。
-Spring Cloud通过使用@FeignClient声明 additional configuration (on top of the FeignClientsConfiguration) 让你充分控制feign clien。
+Spring Cloud中Feign的中心内容是命名客户端。每个feign客户端是应用集成组件的一部分，这些组件共同协作来按照要求访问远程服务器，应用开发者通过`@FeignClient`为组件提供名称。 Spring Cloud为使用了`FeignClientsConfiguration`的客户端创建了一个新的`ApplicationContext`。其中包括了 `feign.Decoder`，`feign.Encoder`和`feign.Contract`。  
+Spring Cloud允许通过使用`@FeignClient`声明额外的配置(覆盖FeignClientsConfiguration)来完全掌控feign客户端。  
+
 ```
 @FeignClient(name = "stores", configuration = FooConfiguration.class)
 public interface StoreClient {
     //..
 }
 ```
-这种情况下客户端由`FeignClientsConfiguration`的成分以及任何 `FooConfiguration` 的成分组成(后者可以覆盖前者)。
 
-[Note]
-`FooConfiguration` 不需要 ` @Configuration`注解。如果注解了， 要注意从任何`@ComponentScan`拒绝`FooConfiguration`，否则指定后配置会变成 `feign.Decoder`, `feign.Encoder`, `feign.Contract`等默认源。这可以通过将其放置于单独的, 从任何 `@ComponentScan` or `@SpringBootApplication`的非重叠性软件包（non-overlapping package）来避免, 或可以在`@ComponentScan`中被明确排除。
-[Note]
-`serviceId`属性被弃用有利于`name` 属性（attribute）。
-[Warning]
-以前使用 `url` attribute, 不需要`name` attribute. 现在才需要` name `。
- `name `和`url` attributes支持Placeholders。
+这种情况下客户端由`FeignClientsConfiguration`和`FooConfiguration`中的组件构成(后者可以覆盖前者)。
+
+> `FooConfiguration` 不需要添加`@Configuration`注解。如果注解了， 要注意从任何`@ComponentScan`中排除`FooConfiguration`，否则会变成 `feign.Decoder`, `feign.Encoder`, `feign.Contract`等默认值的来源。这可以通过将其放置于单独的, 任何 `@ComponentScan`或`@SpringBootApplication`未覆盖到的包中来避免, 或可以在`@ComponentScan`中被明确排除。
+
+> `serviceId`属性被弃用，建议使用`name`。
+
+> 之前版本中，使用`url`属性时不需要配置`name`属性。 现在版本`name`必须使用到。
+
+ `name `和`url`属性支持占位符。
+
 ```
 @FeignClient(name = "${feign.name}", url = "${feign.url}")
 public interface StoreClient {
     //..
-}```
-Spring Cloud Netflix默认为feign提供下述beans (`BeanType `beanName: `ClassName`):
+}
+```
+Spring Cloud Netflix默认为feign提供下述beans (`BeanType` beanName: `ClassName`):
 
 
-- `Decoder `feignDecoder: `ResponseEntityDecoder` (which wraps a `SpringDecoder`)
-
-
+- `Decoder `feignDecoder: `ResponseEntityDecoder` (包括了`SpringDecoder`)
 - `Encoder` feignEncoder: `SpringEncoder`
-
-
 - `Logger` feignLogger: `Slf4jLogger`
-
-
 - `Contract` feignContract: `SpringMvcContract`
-
-
 - `Feign.Builder` feignBuilder: `HystrixFeign.Builder`
+- `Client` feignClient: Ribbon启用时为`LoadBalancerFeignClient`, 否则默认feign client被使用。
 
-
-- `Client` feignClient: 如果Ribbon启用，是`LoadBalancerFeignClient`, 否则默认feign client被使用。
-
-通过分别设置 `feign.okhttp.enabled` 或 `feign.httpclient.enabled` 为`true`， OkHttpClient和ApacheHttpClient feign clients可被使用，并且在类路径（classpath）中使用。通过提供`ClosableHttpClient`（使用Apache）或`OkHttpClient`a bean，可定制 HTTP client当使用OK HTTP。
+通过分别设置`feign.okhttp.enabled`或`feign.httpclient.enabled`属性为`true`，并且在类路径（classpath）中加入，OkHttpClient和ApacheHttpClient的feign客户端可相应的启动。 通过提供`ClosableHttpClient`（使用Apache）或`OkHttpClient`（使用OK HTTP），可实现自定义设置HTTP客户端。
 
 Spring Cloud Netflix默认不为feign提供下述beans，但是仍然从 创建feign client的application context 中查询这些形式的beans。
 
