--- a/Spring/SpringCloud/Netflix/06.Client Side Load Balancer-Ribbon.md
+++ b/Spring/SpringCloud/Netflix/06.Client Side Load Balancer-Ribbon.md
@@ -178,7 +178,7 @@ public class MyClass {
 ## 6.9 Caching of Ribbon Configuration ##
 每个Ribbon命名的客户端都具有一个相对应的由Spring Cloud维护的子Application Context，这应用上下文在第一次向命名客户端发出请求时懒加载。通过示例方式指定Ribbon客户端的名称列表，子应用上下文的加载可改为主动加载：
 
-**application.yml. **
+**application.yml**
 
 ```
 ribbon:
