--- a/Spring/SpringCloud/Netflix/08.External Configuration- Archaius.md
+++ b/Spring/SpringCloud/Netflix/08.External Configuration- Archaius.md
@@ -1,8 +1,8 @@
 # 8.External Configuration: Archaius #
 
-[Archaius](https://github.com/Netflix/archaius)是Netflix client side配置库. 是所有使用Netflix OSS components进行配置的配置库. Archaius是[Apache Commons Configuration](https://commons.apache.org/proper/commons-configuration/) project的扩展. 通过为改变（changes） 轮询（poll）source或为source将changes推送给客户端来补充configuration。Archaius使用Dynamic<Type>Property classes作为属性控件（handles to properties）。
+[Archaius](https://github.com/Netflix/archaius)是Netflix客户端的配置库。所有使用Netflix OSS组件都可使用Archaius进行配置。 Archaius是[Apache Commons Configuration](https://commons.apache.org/proper/commons-configuration/) 工程的扩展。 通过为轮询来源获取改动内容或来源将改动内容推送给客户端的方式来更新配置信息。Archaius使用Dynamic<Type>Property类来处理属性，如下示例所示：
 
-**Archaius Example.**
+**Archaius Example**
 
 ```java
 class ArchaiusTest {
@@ -16,4 +16,4 @@ class ArchaiusTest {
 }
 ```
 
-Archaius有自己单独的配置文件及定位属性（loading priorities）。Spring applications应当逐渐减少对Archaius的直接使用，但是对Netflix tools配置的需要还需要保留。Spring Cloud具有一个Spring Environment Bridge，因此Archaius可以从Spring Environment中读取属性。大多数情况下，当允许他们作为文件对Netflix tools进行配置时，这就允许Spring Boot projects使用一般的configuration toolchain。
+Archaius有自身的一套配置文件及加载属性的方式。Spring应用应当逐渐减少对Archaius的直接使用，但是对Netflix工具的原始配置配置需求依然保留着。Spring Cloud具有一个Spring Environment Bridge，因此Archaius可以从Spring Environment中读取属性。大多数情况下，当根据文档描述的对Netflix工具进行配置时，这个桥接器允许Spring Boot项目使用正常的配置工具链。
