--- a/Nginx/001.Installing nginx.md
+++ b/Nginx/001.Installing nginx.md
@@ -1,106 +1,3 @@
-**How-To**
-
-- Building nginx on the Win32 platform with Visual C
-- Setting up NGINX Plus environment on Amazon EC2
-- Debugging nginx with DTrace pid provider
-- Converting rewrite rules
-- WebSocket proxying
-
-**Development**
-
-- Contributing Changes
-- Development guide
-
-**Modules reference**
-
-- Alphabetical index of directives
-- Alphabetical index of variables
-- Core functionality
-- ngx_http_core_module
-- ngx_http_access_module
-- ngx_http_addition_module
-- ngx_http_api_module
-- ngx_http_auth_basic_module
-- ngx_http_auth_jwt_module
-- ngx_http_auth_request_module
-- ngx_http_autoindex_module
-- ngx_http_browser_module
-- ngx_http_charset_module
-- ngx_http_dav_module
-- ngx_http_empty_gif_module
-- ngx_http_f4f_module
-- ngx_http_fastcgi_module
-- ngx_http_flv_module
-- ngx_http_geo_module
-- ngx_http_geoip_module
-- ngx_http_grpc_module
-- ngx_http_gunzip_module
-- ngx_http_gzip_module
-- ngx_http_gzip_static_module
-- ngx_http_headers_module
-- ngx_http_hls_module
-- ngx_http_image_filter_module
-- ngx_http_index_module
-- ngx_http_js_module
-- ngx_http_keyval_module
-- ngx_http_limit_conn_module
-- ngx_http_limit_req_module
-- ngx_http_log_module
-- ngx_http_map_module
-- ngx_http_memcached_module
-- ngx_http_mirror_module
-- ngx_http_mp4_module
-- ngx_http_perl_module
-- ngx_http_proxy_module
-- ngx_http_random_index_module
-- ngx_http_realip_module
-- ngx_http_referer_module
-- ngx_http_rewrite_module
-- ngx_http_scgi_module
-- ngx_http_secure_link_module
-- ngx_http_session_log_module
-- ngx_http_slice_module
-- ngx_http_spdy_module
-- ngx_http_split_clients_module
-- ngx_http_ssi_module
-- ngx_http_ssl_module
-- ngx_http_status_module
-- ngx_http_stub_status_module
-- ngx_http_sub_module
-- ngx_http_upstream_module
-- ngx_http_upstream_conf_module
-- ngx_http_upstream_hc_module
-- ngx_http_userid_module
-- ngx_http_uwsgi_module
-- ngx_http_v2_module
-- ngx_http_xslt_module
-- ngx_mail_core_module
-- ngx_mail_auth_http_module
-- ngx_mail_proxy_module
-- ngx_mail_ssl_module
-- ngx_mail_imap_module
-- ngx_mail_pop3_module
-- ngx_mail_smtp_module
-- ngx_stream_core_module
-- ngx_stream_access_module
-- ngx_stream_geo_module
-- ngx_stream_geoip_module
-- ngx_stream_js_module
-- ngx_stream_keyval_module
-- ngx_stream_limit_conn_module
-- ngx_stream_log_module
-- ngx_stream_map_module
-- ngx_stream_proxy_module
-- ngx_stream_realip_module
-- ngx_stream_return_module
-- ngx_stream_split_clients_module
-- ngx_stream_ssl_module
-- ngx_stream_ssl_preread_module
-- ngx_stream_upstream_module
-- ngx_stream_upstream_hc_module
-- ngx_stream_zone_sync_module
-- ngx_google_perftools_module
-
 # nginx的安装（Installing nginx）#
 
 nginx can be installed differently, depending on the operating system.
@@ -119,4 +16,6 @@ On FreeBSD, nginx can be installed either from the [packages](https://www.freebs
 
 If some special functionality is required, not available with packages and ports, nginx can also be compiled from source files. While more flexible, this approach may be complex for a beginner. For more information, see [Building nginx from Sources](http://nginx.org/en/docs/configure.html).
 如果需要一些特殊功能，安装包或端口就不适用了，nginx可以从原文件进行编译。此方法虽然具有更大的灵活性，但对于初学者可能过于复杂。
-更多详细信息参阅[Building nginx from Sources](http://nginx.org/en/docs/configure.html)。
+更多详细信息参阅[Building nginx from Sources](002.building%20nginx%20from%20source.md)。
+
+[返回](000.Content.md)
