--- a/Spring/SpringCloud/Netflix/10.Polyglot support with Sidecar.md
+++ b/Spring/SpringCloud/Netflix/10.Polyglot support with Sidecar.md
@@ -1,21 +1,21 @@
 # 10. Polyglot support with Sidecar #
 
-你有想要使用Eureka, Ribbon and Config Server的non-jvm 语言吗？ Spring Cloud Netflix Sidecar受[Netflix Prana](https://github.com/Netflix/Prana)启发。包括一个简单的http api用来为 given service获取所有的instances (例如host以及port) 也可以通过嵌入式的Zuul proxy进行proxy service calls，该Zuul proxy从Eureka获取route入口。Spring Cloud Config Server直接通过host lookup 或Zuul Proxy进行访问。该non-jvm app应该执行health check，如此 一旦该appis up or down，Sidecar可以报告给eureka。
+你有想要在非JVM语言环境中使用Eureka, Ribbon and Config Server吗？[Netflix Prana](https://github.com/Netflix/Prana)开发了Spring Cloud Netflix Sidecar。它包括一个简单的HTTP API用来获取给定的服务对应的所有的实例(例如host以及port)，也可以通过嵌入式的Zuuldialing服务调用，该Zuul代理会从Eureka获取路由入口。Spring Cloud Config Server直接通过主机查找或Zuul Proxy进行访问。非JVM应用应该执行health check，保证Sidecar可以把服务是否上线报告给eureka。
 
-To include Sidecar：dependency with group `org.springframework.cloud` 
-artifact id `spring-cloud-netflix-sidecar`
+引入Sidecar：使用group `org.springframework.cloud`及artifact id `spring-cloud-netflix-sidecar`。  
 
-使Sidecar有效, 使用`@EnableSidecar` 创建Spring Boot 程序。该程序包括 `@EnableCircuitBreaker`, `@EnableDiscoveryClient`, 以及`@EnableZuulProxy`。在同一个host下作为non-jvm程序运行生成的程序。
-在`application.yml`中添加`sidecar.port` 以及`sidecar.health-uri`来配置side car 。`sidecar.port` property是non-jvm app监听（listening on）的一部分。因此Sidecar可以使用Eureka对app进行合理的登记（properly register）。`sidecar.health-uri` 是一个uri ，在non-jvm app里mimicks？？ a Spring Boot health indicator。它应当返回类似下面的json文档：
-**health-uri-document. **
+使Sidecar有效, 使用`@EnableSidecar`创建Spring Boot程序。该程序包括 `@EnableCircuitBreaker`, `@EnableDiscoveryClient`, 以及`@EnableZuulProxy`。在同一个主机下运行非JVM程序。  
+在`application.yml`中添加`sidecar.port` 以及`sidecar.health-uri`来配置side car 。`sidecar.port`属性是非JVM应用监听的端口。因此Sidecar可以使用Eureka对app进行合理的注册。`sidecar.health-uri` 是一个uri ，在non-jvm app里模仿Spring Boot health indicator。它应当返回类似下面的json文档：
+**health-uri-document**
+```json
     {
       "status":"UP"
     }
+```
 
-这是一个Sidecar程序的例子：application.yml.
-
-**application.yml. **
-
+这是一个Sidecar程序的例子：
+**application.yml**
+```yaml
     server:
       port: 5678
     spring:
@@ -25,10 +25,12 @@ artifact id `spring-cloud-netflix-sidecar`
     sidecar:
       port: 8000
       health-uri: http://localhost:8000/health.json
+```
 
-
-`DiscoveryClient.getInstances()` method的api是` /hosts/{serviceId}`。 这有一个例子响应了`/hosts/customers` ，返回两个具有不同hosts的instances。对于该non-jvm app (如果sidecar在5678端口) 在 `http://localhost:5678/hosts/{serviceId}`下可以访问该api。
-**/hosts/customers. **
+`DiscoveryClient.getInstances()` 方法的api是` /hosts/{serviceId}`。这有一个响应`/hosts/customers`的例子，返回两个具有不同hosts的instances。
+对于该非JVM应用(如果sidecar监听5678端口) 在 `http://localhost:5678/hosts/{serviceId}`下可以访问该api。
+**/hosts/customers**
+```json
 [
     {
         "host": "myhost",
@@ -45,11 +47,12 @@ artifact id `spring-cloud-netflix-sidecar`
         "secure": false
     }
 ]
+```
 
-
-Zuul proxy自动为每个service添加routes，该service是在eureka中可以被 `/<serviceId>`识别, 所以customers service在`/customers`下是可用的。Non-jvm app可以通过`http://localhost:5678/customers `(假设sidecar正监听 port 5678)来访问 customer service。
-如果Config Server被Eureka登记， non-jvm application可以通过Zuul proxy来进行访问。如果该ConfigServer的serviceId是configserver并且Sidecar是在port 5678，那么它可以http://localhost:5678/configserver下进行访问。
-Non-jvm app可以利用Config Server’s ability来返回YAML documents例如，a call to http://sidecar.local.spring.io:5678/configserver/default-master.yml 可能导致 YAML document像接下来的样子：
+Zuul代理自动为在eureka中已知的服务添加路由到`/<serviceId>`, 所以customers服务在`/customers`端点下是可用的。非JVM应用可以通过`http://localhost:5678/customers`(假设sidecar正监听5678端口)来访问customer服务。  
+如果Config Server在Eureka上登记，非JVM应用可以通过Zuul代理来进行访问。如果该ConfigServer的serviceId是`configserver`并且Sidecar监听5678端口，那么它可以`http://localhost:5678/configserver`下进行访问。  
+非JVM应用可以使用Config Server返回YAML文档的能力，例如，`http://sidecar.local.spring.io:5678/configserver/default-master.yml`可能导致 YAML document像接下来的样子：
+```yaml
 eureka:
   client:
     serviceUrl:
@@ -58,3 +61,4 @@ eureka:
 info:
   description: Spring Cloud Samples
   url: https://github.com/spring-cloud-samples
+```
