--- a/Spring/SpringCloud/Netflix/01.Service Discovery-Eureka Clients.md
+++ b/Spring/SpringCloud/Netflix/01.Service Discovery-Eureka Clients.md
@@ -84,9 +84,8 @@ eureka:
 ## 1.6 Eureka’s Health Checks ##
 
 默认的，Eureka使用客户端心跳来决定客户端是否在线（up）。
-未指定情况，Discovery Client不会向每个Spring Boot Actuator传播当前的健康检查状态。也就意味着成功登记后的Eureka会总是声明该程序application是 'UP' 状态。
-开启Eureka健康检测后这种行为可能发起警告，从而上传程序状态给Eureka。这样，其他的每个程序都不会与非'UP'状态的程序通信。
-
+未指定情况，Discovery Client不会普及每个Spring Boot Actuator应用的当前健康检查状态。也就意味着成功登记后，Eureka会一直声明该应用处于'UP'状态。
+这种行为可以通过开启Eureka健康检测改变，从而上传程序状态给Eureka。这样，其他程序不会向非'UP'状态的程序发送流量。
 **application.yml**
 ```yaml
 eureka:
@@ -94,7 +93,7 @@ eureka:
   healthcheck:
    enabled: true
 ```
->`eureka.client.healthcheck.enabled=true`只能被设置在**application.yml**中。 给bootstrap.yml赋值会导致副作用出现,如登记过的eureka出现`UNKNOWN `状态。
+>`eureka.client.healthcheck.enabled=true`只能被设置在**application.yml**中。在bootstrap.yml赋值会导致意想不到的副作用出现，如登记过的eureka出现`UNKNOWN `状态。
 
 若需要控制健康检测, 可以考虑实现自定义`com.netflix.appinfo.HealthCheckHandler`。
 
