--- a/Nginx/000.Content.md
+++ b/Nginx/000.Content.md
@@ -2,20 +2,20 @@
 
 - [Installing nginx](001.Installing%20nginx.md)
 - [Building nginx from Sources](002.building%20nginx%20from%20source.md)
-- Beginner’s Guide
+- [Beginner’s Guide](003.beginner%60s%20guide.md)
 - Admin’s Guide
-- Controlling nginx
-- Connection processing methods
-- Setting up hashes
-- A debugging log
-- Logging to syslog
-- Configuration file measurement units
-- Command-line parameters
-- nginx for Windows
-- How nginx processes a request
-- Server names
-- Using nginx as HTTP load balancer
-- Configuring HTTPS servers
+- [Controlling nginx](005.controlling%20nginx.md)
+- [Connection processing methods](006.Connection%20processing%20methods.md)
+- [Setting up hashes](007.Setting%20up%20hashes.md)
+- [A debugging log](008.A%20debugging%20log.md)
+- [Logging to syslog](009.Logging%20to%20syslog.md)
+- [Configuration file measurement units](010.Configuration%20file%20measurement%20units.md)
+- [Command-line parameters](011.Command-line%20parameters.md)
+- [nginx for Windows](012.nginx%20for%20Windows.md)
+- [How nginx processes a request](013.How%20nginx%20processes%20a%20request.md)
+- [Server names](014.Server%20names.md)
+- [Using nginx as HTTP load balancer](015.Using%20nginx%20as%20HTTP%20load%20balancer.md)
+- [Configuring HTTPS servers](016.Configuring%20HTTPS%20servers.md)
 - How nginx processes a TCP/UDP session
 - About njs
 - Chapter “nginx” in “The Architecture of Open Source Applications”
