--- a/Nginx/003.beginner`s guide.md
+++ b/Nginx/003.beginner`s guide.md
@@ -270,3 +270,5 @@ The most basic nginx configuration to work with a FastCGI server includes using 
 >}`
 
 This will set up a server that will route all requests except for requests for static images to the proxied server operating on `localhost:9000` through the FastCGI protocol.
+
+[返回](000.Content.md)
