--- a/Nginx/006.Connection processing methods.md
+++ b/Nginx/006.Connection processing methods.md
@@ -42,4 +42,7 @@ Some older distributions like SuSE 8.2 provide patches that add epoll support to
 
 - `eventport` — event ports, method used on Solaris 10+ (due to known issues, it is recommended using the `/dev/poll` method instead).
 
-- `eventport` — 事件端口, 用于Solaris 10+ (由于已知问题, 推荐使用`/dev/poll` 方法作为替代)下的方式。
+- `eventport` — 事件端口, 用于Solaris 10+ (由于已知问题, 推荐使用`/dev/poll` 方法作为替代)下的方式。  
+
+
+[返回](000.Content.md)
