--- a/Nginx/008.A debugging log.md
+++ b/Nginx/008.A debugging log.md
@@ -87,4 +87,7 @@ Logging to the memory buffer on the debug level does not have significant impact
 	end
 
 	set $buf = (ngx_log_memory_buf_t *) $log->wdata
-	dump binary memory debug_log.txt $buf->start $buf->end
+	dump binary memory debug_log.txt $buf->start $buf->end  
+	
+	
+[返回](000.Content.md)
