--- a/Nginx/011.Command-line parameters.md
+++ b/Nginx/011.Command-line parameters.md
@@ -40,4 +40,7 @@ nginx支持下述命令行参数：
 与`-t`功能类似,但是会将配置文件转存为标准输出。
 
 - `-v` — print nginx version.打印nginx版本信息
-- `-V` — print nginx version, compiler version, and configure parameters.打印nginx版本、编译器版本、及配置参数等信息。
+- `-V` — print nginx version, compiler version, and configure parameters.打印nginx版本、编译器版本、及配置参数等信息。  
+
+
+[返回](000.Content.md)
