--- a/Nginx/013.How nginx processes a request.md
+++ b/Nginx/013.How nginx processes a request.md
@@ -186,4 +186,6 @@ Now let’s look at how requests would be processed in the configuration above:
 
 
 written by Igor Sysoev
-edited by Brian Mercer
+edited by Brian Mercer  
+
+[返回](000.Content.md)
