--- a/Nginx/005.controlling nginx.md
+++ b/Nginx/005.controlling nginx.md
@@ -179,3 +179,6 @@ If upgrade was successful, then the old master process should be sent the QUIT s
 ｜36265 ｜36264 ｜nobody｜   0.0 ｜ 1364｜ kqread ｜nginx: worker process (nginx)｜
 ｜36266｜ 36264 ｜nobody ｜  0.0 ｜ 1364｜ kqread ｜nginx: worker process (nginx)｜
 ｜36267 ｜36264｜ nobody  ｜ 0.0 ｜ 1364｜ kqread ｜nginx: worker process (nginx)｜
+  
+  
+[返回](000.Content.md)
