--- a/Nginx/007.Setting up hashes.md
+++ b/Nginx/007.Setting up hashes.md
@@ -7,4 +7,6 @@ To quickly process static sets of data such as server names, [map ](http://nginx
 
 The hash bucket size parameter is aligned to the size that is a multiple of the processor’s cache line size. This speeds up key search in a hash on modern processors by reducing the number of memory accesses. If hash bucket size is equal to one processor’s cache line size then the number of memory accesses during the key search will be two in the worst case — first to compute the bucket address, and second during the key search inside the bucket. Therefore, if nginx emits the message requesting to increase either hash max size or hash bucket size then the first parameter should first be increased.
 
-hash bucket大小参数与进程的缓存线（cache line）大小的倍数一致。这种方式通过减少内存访问量可以提高现代处理器hash中key的查找速度。如果hash bucket大小等于进程的缓存线大小，那么在进行key查找时的内存访问量会有两种最坏的情况发生：第一种是在计算bucket地址时，第二种是在bucket中进行key查找时。因此，如果nginx发出消息来请求增加hash最大值或hash bucket大小，那么第一个参数会首先被增加。
+hash bucket大小参数与进程的缓存线（cache line）大小的倍数一致。这种方式通过减少内存访问量可以提高现代处理器hash中key的查找速度。如果hash bucket大小等于进程的缓存线大小，那么在进行key查找时的内存访问量会有两种最坏的情况发生：第一种是在计算bucket地址时，第二种是在bucket中进行key查找时。因此，如果nginx发出消息来请求增加hash最大值或hash bucket大小，那么第一个参数会首先被增加。  
+
+[返回](000.Content.md)
