--- a/Gradle/00.Groovy基础.md
+++ b/Gradle/00.Groovy基础.md
@@ -96,8 +96,8 @@ buildTools.each { buildTool ->
 在方括号中放入一串用逗号分隔的键值对就可以创建一个新的Map，默认实现是java.lang.LinkedHashMap。  
 
 ```groovy
-def incerptionYears = {"Ant": 2000, "Maven":2004}
-assert incerptionYears.class == java.lang.LinkedHashMap
+def incerptionYears = ["Ant": 2000, "Maven":2004]
+assert incerptionYears.getClass() == java.util.LinkedHashMap
 assert incerptionYears.size() == 2
 assert incerptionYears.Ant == 2000
 assert incerptionYears['Ant'] == 2000
