--- a/Gradle/00.Groovy基础.md
+++ b/Gradle/00.Groovy基础.md
@@ -129,7 +129,7 @@ assert projectVersion.minor == 30
 ## 4.8 闭包
 闭包是一个groovy.lang.Closure的代码块，与其他编程语言的lambda特性类似。闭包可以被赋值给变量，作为参数传递给方法，并像普通方法一样来调用。  
 
-**隐式的闭包参数**  
+#### 隐式的闭包参数
 每个没有显示定义任何参数的闭包都可以访问一个隐式的参数it。it代表调用这个闭包的时候第一个传递进来的参数。如果没有提供参数，那么参数的值就是null。  
 
 ```groovy
@@ -142,15 +142,91 @@ incrementMajorProjectVersion(projectVersion)
 assert projectVersion.major == 2
 ```  
 
+#### 显式的闭包参数
+除了使用隐式的闭包参数，还可以自定义更具描述性的参数名称。  
 
++ 单一的、显式参数的闭包  
 
+```groovy
+def incrementMajorProjectVersion = { ProjectVersion version -> 
+  version.major++
+}
 
+ProjectVersion projectVersion = new ProjectVersion(major:1, minor:10)
+incrementMajorProjectVersion(projectVersion)
+assert projectVersion.major == 2
+```
++ 多个无类型参数的闭包  
 
+```groovy
+def setFullProjectVersion = { projectVersion, major, minor -> 
+  projectVersion.major = major
+  projectVersion.minor = minor
+}
 
+ProjectVersion projectVersion = new ProjectVersion(major:1, minor:10)
+setFullProjectVersion(projectVersion, 2, 1)
+assert projectVersion.major == 2
+assert projectVersion.minor == 1
+```
 
+#### 闭包返回值
+闭包总是会返回一个值。返回值是闭包的最后一条语句的值，或者是可执行的return语句的值。如果闭包的最后一条语句没有值，就返回null。  
 
+```groovy
+ProjectVersion projectVersion = new ProjectVersion(major:1, minor:10)
+def minorVersion = {projectVersion.minor}
+assert minorVersion() == 10
+```
 
+#### 闭包作为方法参数
 
+```groovy
+Integer incrementVersion(Closure closure, Integer count) {
+  closure() + count
+}
 
+ProjectVersion projectVersion = new ProjectVersion(major: 1, minor: 10)
+assert incrementVersion({projectVersion.minor}, 2) == 12
+```
 
+#### 闭包委托
+闭包代码在委托的闭包上执行。默认的，这个委托就是闭包的所有者。比如，如果在Groovy脚本中定义了一个闭包，那么所有者就是一个groovy.lang.Script实例。闭包的隐式变量delegate允许重定义默认的所有者。  
+```groovy
+class ProjectVersion {
+  Integer major
+  Integer minor
+  
+  void increment(Closure closure) {
+    closure.resolveStrategy = Closure.DELEGATE_ONLY
+	closure.delegate = this
+	closure()
+  }
+}
+
+ProjectVersion projectVersion = new ProjectVersion(major: 1, minor: 10)
+projectVersion.increment {major += 1}
+assert projectVersion.major == 2
+projectVersion.increment {minor += 5}
+assert projectVersion.minor == 15
+```
+
+## 4.9 Groovy开发工具库
+GDK扩展了JDK，其为标准的JDK类提供了很多方便的方法。  
+
+```groovy
+def buildTools = ['Ant', 'Maven', 'Gradle']
+assert buildTools.find { it == 'Gradle'} == 'Gradle'
+assert buildTools.every { it.size() >= 4} == false
+
+assert 'gradle'.capitalize() == 'Gradle'
+
+new File('build.gradle').eachLine { line ->
+  println line
+}
+```
+
+# 5. 在Gradle构建脚本中使用Groovy
+Gradle构建脚本是合法的Groovy脚本。在构建脚本中，可以使用Groovy语言的所有特性。  
+Gradle使用Groovy编写的DSL来建模典型的构建关系。每个构建脚本都至少有一个对应的org.gradle.api.Project实例。在大多数情况下，在构造脚本中调用的属性和方法都自动委托给了这个Project实例。  
 
