--- a/Spring/SpringCloud/Netflix/01.Service Discovery-Eureka Clients.md
+++ b/Spring/SpringCloud/Netflix/01.Service Discovery-Eureka Clients.md
@@ -1,6 +1,6 @@
 # 1. Service Discovery: Eureka Clients
 
- 服务发现是微服务架构的关键原则之一。尝试手动或约定方式配置每个客户端非常困难且脆弱。Eureka是Netflix服务发现的服务器与客户端。Eureka服务器能够通过配置和扩展提高可用性，每个服务器的注册状态复制给其他服务器。
+ 服务发现是微服务架构的一条关键原则。通过手动配置方式或约定俗成的方式来配置每个客户端非常困难且脆弱。Eureka是Netflix服务发现的服务器与客户端。其Eureka服务器能够通过配置和部署来达到高可用性，其中的每台服务器会相互复制已注册服务的状态。
 
 ## 1.1 How to Include Eureka Client ##
 
@@ -8,51 +8,49 @@
  查看 [Spring Cloud Project](https://projects.spring.io/spring-cloud/)来学习更多如何使用当前的Spring Cloud Release Train设置构建系统。
 
 ## 1.2 Registering with Eureka ##
- 当客户端向Eureka注册时, 需要提供自身的元数据，例如：主机host、端口port、健康监控URL、主页等。
- Eureka从每个服务器的实例（instance）接收心跳消息。 如果心跳在配置时间内（configurable timetable）失败，此实例会被从注册服务器上移除。
+ 客户端会向Eureka注册并提供自身的相关元数据，例如：主机host、端口port、健康监控URL、主页等。 Eureka会受到来自服务下所有实例（instance）的心跳消息。 如果心跳在配置时间内（configurable timetable）失败，此实例会被从注册信息中移除。  
 
  Eureka客户端示例(标准的SpringBoot应用):
  ```java
- @Configuration
- @ComponentScan
- @EnableAutoConfiguration
- @RestController
- public class Application {
-    
+@SpringBootApplication
+@RestController
+public class Application {
+
     @RequestMapping("/")
     public String home() {
-      return "Hello world";
+        return "Hello world";
     }
-    
+
     public static void main(String[] args) {
-      new SpringApplicationBuilder(Application.class).web(true).run(args);
+        new SpringApplicationBuilder(Application.class).web(true).run(args);
     }
- }
+
+}
  ```
- 类路径中的 `spring-cloud-starter-netflix-eureka-client` 能使你的程序自动注册到Eureka服务器。Eureka服务器的地址需要配置，如在application.yml配置：
+ 将 `spring-cloud-starter-netflix-eureka-client` 添加到classpath下，你的应用会自动向Eureka服务器发送注册请求。我们需要如下示例在application.yml中添加Eureka服务器地址的配置：  
  ```yaml
  eureka:
   client:
    serviceUrl:
     defaultZone: http://localhost:8761/eureka/
  ```
- "defaultZone" 是一个神奇的字符串回馈值，为所有未配置指定服务器URL的客户端提供默认值。
+ "defaultZone" 是一个魔法值字符串，为所有未设置优先权的客户端提供serviceUrl的默认值。
 
- 缺省程序名称(service ID), 虚拟主机（virtual host) 和非保护端口 （non-secure port）会从`Environment`中获取，分别是 `${spring.application.name}`、`${spring.application.name}` 和 `${server.port}`
+ 缺省程序名称(service ID), 虚拟主机（virtual host) 和非保护端口 （non-secure port，取自`Environment`），分别是 `${spring.application.name}`、`${spring.application.name}` 和 `${server.port}`
 
-在类路径中添加 `spring-cloud-starter-netflix-eureka-client` 可以使应用同时作为Eureka的实例(它会向服务器注册自身)和客户端(可通过服务器查询定位其他服务实例)。实例的行为由`eureka.instance.* `配置关键字驱动的, 如果程序具有` spring.application.name`属性(Eureka默认服务ID)也可使用这些默认值。
+添加 `spring-cloud-starter-netflix-eureka-client` 到classpath下，应用会同时拥有两个角色：Eureka的实例(instance，它会向服务器注册自身)和Eureka客户端(client，可通过服务器查询定位其他服务实例)。实例的行为由`eureka.instance.*`配置项管理, 如果程序已配置`spring.application.name`属性(Eureka默认服务ID)也可使用这些默认值。
 
 查看 [EurekaInstanceConfigBean](https://github.com/spring-cloud/spring-cloud-netflix/blob/master/spring-cloud-netflix-eureka-client/src/main/java/org/springframework/cloud/netflix/eureka/EurekaInstanceConfigBean.java) 和 [EurekaClientConfigBean](https://github.com/spring-cloud/spring-cloud-netflix/blob/master/spring-cloud-netflix-eureka-client/src/main/java/org/springframework/cloud/netflix/eureka/EurekaClientConfigBean.java) 以获取更详细的信息。
 
-可通过设置 `eureka.client.enabled`为 `false`来禁止Eureka Discovery Client。
+可通过设置 `eureka.client.enabled`为 `false`来禁用Eureka Discovery Client。
 
 ## 1.3 Authenticating with the Eureka Server ##
-如果`eureka.client.serviceUrl.defaultZone`的URLs嵌入了验证信息，HTTP基本验证会自动添加到你的客户端(curl方式, 例如 `http://user:password@localhost:8761/eureka`)。更复杂的需求可以创建   `DiscoveryClientOptionalArgs`类型的`@Bean` 以及注入`ClientFilter`实例, 上述所有配置都会被应用于从客户端到服务器的调用。
+如果`eureka.client.serviceUrl.defaultZone`的URLs嵌入了验证信息，HTTP基本验证会自动添加到你的客户端(curl方式, 例如 `http://user:password@localhost:8761/eureka`)。更复杂的需求可以创建 `DiscoveryClientOptionalArgs`类型的`@Bean` 以及注入`ClientFilter`实例, 所有从客户端到服务器的调用都会经过这些过滤器。  
 
 > 由于Eureka的限制，每个服务器都执行基本验证是无法实现的，因此只有第一个发现的服务器会执行验证。
 
 ## 1.4 Status Page and Health Indicator ##
- Eureka实例的status page和health indicators分别默认为"/info" 和 "/health" ,是Spring Boot Actuator里可用端点的默认位置（default locations）。你需要替换这些, 即使Actuator application 使用的是非默认context 、servlet路径(e.g. `server.servletPath=/foo`)或者 管理节点路径(e.g. `management.contextPath=/admin`)。
+ Eureka实例的status page和health indicators分别默认为"/info" 和 "/health" ,是Spring Boot Actuator里可用端点的默认位置（default locations）。对于使用非默认context 、servlet路径(e.g. `server.servletPath=/foo`)或者 管理节点路径(e.g. `management.contextPath=/admin`)的Actuator应用，我们需要作出修改。
 实例:
 
 **application.yml**
@@ -62,10 +60,13 @@ eureka:
   statusPageUrlPath: ${management.context-path}/info
   healthCheckUrlPath: ${management.context-path}/health
 ```
-上述链接显示了被客户端clients使用的元数据，并且在一些场景中用于判断是否需要向程序发送请求, 因此准确指定这些信息将会非常有用。
+这些链接显示了供客户端使用的元数据，并且在一些场景中用于判断是否需要向应用发送请求, 因此明确相关信息是非常有用的。  
 
 ## 1.5 Registering a Secure Application ##
-如果你希望 app能够通过HTTPS连接，可以在`EurekaInstanceConfig`设置两个flags,分别是`eureka.instance.[nonSecurePortEnabled，securePortEnabled]=[false,true]` 。这样能使Eureka发布实例信息时明确指定使用安全通信。Spring Cloud 的`DiscoveryClient`会返回一个https开头的URI，并且本地Eureka实例信息会使用通信安全的health check的URL.
+如果你的app需要使用HTTPS进行连接，可以设置`EurekaInstanceConfig`中的两个标识：  
++ `eureka.instance.[nonSecurePortEnabled]=[false]`
++ `eureka.instance.[securePortEnabled]=[true]` 。  
+如此设置能使Eureka在发布实例信息时明确偏好使用安全通信，Spring Cloud 的`DiscoveryClient`会向相关服务返回https开头的URI。并且本地Eureka实例信息会使用通信安全的health check的URL。  
 
 因为Eureka的内部工作机制, 在没有明确覆盖的情况下依然为status和home page发布非安全URL。能够使用占位符来配置eureka实例的url，例如：
 
@@ -77,15 +78,13 @@ eureka:
   healthCheckUrl: https://${eureka.hostname}/health
   homePageUrl: https://${eureka.hostname}/
 ```
-(注意 `${eureka.hostname}` 是本地占位符，只可用在Eureka的后续版本.使用Spring 占位符可以实现相同的作用，例如使用`${eureka.instance.hostName}`)
+(注意 `${eureka.hostname}` 是原生占位符，只可用在Eureka的最新版本中使用。使用Spring 占位符可以达到同样的效果，例如使用`${eureka.instance.hostName}`)。
 
 > 如果你的app是由通过代理服务器（proxy）运行, 并且SSL终端也在该代理中(例如 ，作为服务运行在Cloud Foundry或其他平台)，那么需要确保该代理的`forwarded`报文头是被拦截的并且由程序可处理。在Spring Boot中内置的Tomcat 容器如果精确配置'X-Forwarded-\*`报文头，可以自动实现上述功能。典型错误是：该链接被你的程序释放到自身中(错误的host, 端口或协议)。
 
 ## 1.6 Eureka’s Health Checks ##
 
-默认的，Eureka使用客户端心跳来决定客户端是否在线（up）。
-未指定情况，Discovery Client不会普及每个Spring Boot Actuator应用的当前健康检查状态。也就意味着成功登记后，Eureka会一直声明该应用处于'UP'状态。
-这种行为可以通过开启Eureka健康检测改变，从而上传程序状态给Eureka。这样，其他程序不会向非'UP'状态的程序发送流量。
+Eureka默认使用客户端的心跳机制来判断是否在线（up）。除非明确指定的情况，Discovery Client不会传递每个Spring Boot Actuator应用的当前健康检查状态。也就意味着应用在成功注册到Eureka后会一直被声明为'UP'状态。通过开启Eureka健康检测可修改这种默认行为，从而向Eureka传递应用的状态。这样，其他应用不会向非'UP'状态的程序发送流量。
 **application.yml**
 ```yaml
 eureka:
@@ -93,21 +92,17 @@ eureka:
   healthcheck:
    enabled: true
 ```
->`eureka.client.healthcheck.enabled=true`只能被设置在**application.yml**中。在bootstrap.yml赋值会导致意想不到的副作用出现，如登记过的eureka出现`UNKNOWN `状态。
+> `eureka.client.healthcheck.enabled=true`只能被设置在**application.yml**中。在bootstrap.yml赋值会导致意想不到的副作用出现，如登记过的eureka出现`UNKNOWN`状态。  
 
-若需要控制健康检测, 可以考虑实现自定义`com.netflix.appinfo.HealthCheckHandler`。
+若需要控制健康检测, 可以考虑实现自定义的`com.netflix.appinfo.HealthCheckHandler`。  
 
 ## 1.7 Eureka Metadata for Instances and Clients ##
-花费一些时间来了解 Eureka元数据的工作方式是很值得的, 如此你可以在自己的平台上做出一些有效的配置使用。
-主机名称、IP地址、端口号、状态页和健康检查等都是一些标准元数据。这些元数据会发布到服务注册中，客户端通过它们与服务器直接联系。
-其他元数据可附加在实例注册信息的`eureka.instance.metadataMap`属性中（这种方式同样适用于远程客户端）, 
-但是一般来说在不了解到元数据的含义的情况下不会改变客户端的行为。 下面讲述了一些Spring Cloud已经指明作用的metadata map的特例。
+花费一些时间来了解 Eureka元数据的工作方式是值得的, 如此你可以在自己的平台上有效的使用配置。标准元数据有主机名称、IP地址、端口号、状态页和健康检查等。这些元数据会发布到服务注册中心，客户端可以通过它们与服务器直接联系。其他元数据可通过属性`eureka.instance.metadataMap`设置到实例注册信息中（这些元数据可供远程客户端使用）, 一般来说额外的元数据不会改变客户端的行为，除非客户端了解这些元数据的作用。 下面讲述了一些Spring Cloud已经指明作用的元数据映射的特例。  
 
 ### 1.7.1 Using Eureka on Cloudfoundry ###
 
-Cloudfoundry具有全局路由，所以同一个应用的所有实例有相同的主机名称(其他相似架构的PaaS解决方案也是如此)。
-如果你使用路由(依赖于你当前设置的平台强烈或强制性使用), 就需要明确设置主机名称和端口号(安全或非安全)。
-你或许希望使用实例元数据来区别客户端实例(例如自定义的负载均衡器）。默认地，`eureka.instance.instanceId`同`vcap.application.instance_id`。
+Cloud Foundry具有全局路由，所以同一个应用的所有实例有相同的主机名称(其他相似架构的PaaS解决方案也是如此)。这对Eureka来说没问题，但是如果你使用路由(推荐或强制要求，这依赖于具体设置), 就需要明确设置主机名称和端口号(安全或非安全)。
+你也许会希望利用实例元数据以便区分客户端上的各个实例(例如自定义的负载均衡器）。默认地，`eureka.instance.instanceId`同`vcap.application.instance_id`。
 例如:
 
 **application.yml**
@@ -118,11 +113,11 @@ eureka:
     nonSecurePort: 80
 ```
 根据你的Cloudfoundry实例里规定的安全规则，你或许可以注册并且使用主机的IP地址来实现服务对服务的调用。
-此方案暂时对Pivotal Web Services (PWS)中不可用.
+此方案暂时对Pivotal Web Services (PWS)中不可用。
 
 ### 1.7.2 Using Eureka on AWS ###
 
-如果计划把程序AWS云平台配置, 那么Eureka实例将必须配置为AWS可用，可以通过如下方式定制EurekaInstanceConfigBean来实现:
+如果计划把程序AWS云平台配置, 那么Eureka实例将必须配置为AWS可用，可以通过如下方式定制`EurekaInstanceConfigBean`来实现:
 ```java
     @Bean
     @Profile("!default")
@@ -137,7 +132,7 @@ eureka:
 ### 1.7.3 Changing the Eureka Instance ID ###
 
 一般地，Netflix的Eureka实例使用主机名称作为ID来注册(如每个主机都只有一个service)。Spring Cloud Eureka提供了一个更有意义的的系统默认值，
-如下面所示: `${spring.cloud.client.hostname}:${spring.application.name}:${spring.application.instance_id:${server.port}}}`。
+如下面所示: `${spring.cloud.client.hostname}:${spring.application.name}:${spring.application.instance_id:${server.port}}`。
 例如：`myhost:myappname:8080`。
 
 使用Spring Cloud可以通过`eureka.instance.instanceId`设置唯一识别符来重写实例ID。例如:
@@ -148,12 +143,10 @@ eureka:
   instance:
     instanceId: ${spring.application.name}:${vcap.application.instance_id:${spring.application.instance_id:${random.value}}}
 ```
-使用元数据, 当多个服务实例配置在localhost时, 随机值随之生效而使实例唯一。
-在Cloudfoundry中，Spring Boot程序的`vcap.application.instance_id`会被自动填充, 因此随机值就不必要了。
+使用元数据, 当多个服务实例配置在localhost时, 随机值随之生效而使实例唯一。在Cloudfoundry中，Spring Boot程序的`vcap.application.instance_id`会被自动填充, 因此随机值就不必要了。
 
 ## 1.8 Using the EurekaClient ##
-一旦你的app注解了`@EnableDiscoveryClient`(或`@EnableEurekaClient`)，就可以用它来从Eureka Server中发现服务实例。
-一种方式是使用原生的`com.netflix.discovery.EurekaClient`(对照Spring Cloud的`DiscoveryClient`)。
+一旦应用实现了服务发现客户端，你就能够通过它获取Eureka Server上的服务实例。一种方式是使用原生的`com.netflix.discovery.EurekaClient`(对照Spring Cloud的`DiscoveryClient`)。  
 ```java
     @Autowired
     private EurekaClient discoveryClient;
@@ -163,8 +156,7 @@ eureka:
     return instance.getHomePageUrl();
     }
 ```
-> 不要在`@PostConstruct`方法或者`@Scheduled`方法(或者任何 `ApplicationContext`还未开始的地方)中使用`EurekaClient`。
-> `EurekaClient`在`SmartLifecycle`(设置`phase=0`)中初始化，因此确定它可用的最早时机是另一个更高phase值的`SmartLifecycle`中。
+> 不要在`@PostConstruct`方法或者`@Scheduled`方法(或者任何 `ApplicationContext`还未初始化的地方)中使用`EurekaClient`。`EurekaClient`在`SmartLifecycle`(设置`phase=0`)中初始化，因此确定它可用的最早时机是另一个更高phase值的`SmartLifecycle`中。
 
 ### 1.8.1 EurekaClient without Jersey ###
 
